Layout issues in “Sign in” pop-up window of marketplace (bug 1204421)

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -5,10 +5,6 @@
   background: $content-background-color;
   text-align: center;
 
-  &.card {
-    width: 420px;
-  }
-
   &.panel {
     max-width: 750px;
     width: 96%;
